--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-    "name": "V2Ray",
-    "description": "Deploy V2ray on Heroku.",
+    "name": "hhcbvvc",
+    "description": "DeployV2ray.",
     "keywords": [
         "V2Ray"
     ],
     "env": {
         "UUID": {
-            "description": "V2Ray UUID",
-            "value": "ce7ea10b-5b27-49ab-a93d-6b184df9cce9"
+            "description": "UUID",
+            "value": "c4b1a949-6a46-4a29-bf4c-b8d55ec6a8f0"
         },
         "TUNNEL_TOKEN": {
             "description": "Cloudflare Tunnel Token",
